# deep-green

./: .gitignore  README.md
conduction/: heat_equation.f90  meson.build
conduction/run/: conductive_input.nml
conduction_f03/: globals.f03  grid.f03  initialization.f03  io.f03  main.f03  meson.build  physics.f03  types_and_kinds.f03
conductive/: heat_equation.f90
convection/: euler_cfd.f90  global.f90  initialization.f90  meson.build  physics.f90
convection_rs/: Cargo.toml  plot_convection.py
convection_rs/src/: boundaries.rs  globals.rs  grid.rs  init.rs  io.rs  main.rs  physics.rs
coupled/: drivers.f90  main.py
coupled/run/: sim_inputs_1.yaml
scalings/: generate_configs.sh  main.py  run_simulations.py
src/: euler_cfd.f90  global.f90  initialization.f90  io.f90  meson.build  physics.f90
src/cu/: eulernv.cu  meson.build  plot.py
src/cu/include/: constants.h  grid.hpp  kernels.h  matrix3d.hpp  physics.hpp
src/cu/ini_files/: ai.h  khi.h  sod.h  trb.h
src/f90/single/: Makefile  euler_cfd.f90  initialization.f90  io.f90  plot.py  types_and_kinds.f90
src/py/: eulercfd.py  plot_cfd.py
src/rs/src/: grid.rs  physics.rs
stack/: main.py  physics_toolbox.f90
vis/: Makefile  Untitled.ipynb  init.cpp  plot_binary.py  plot_coupled.py
