[package]
name = "rustfd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = "0.8.1"
ndarray-stats = "0.5.1"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.10.0"
strum = "0.26.2"
strum_macros = "0.26.2"
clap = { version = "4.5.4", features = ["derive"] }
